@startuml Class diagram
!theme mono

class Game {
    - playerX: Player
    - playerO: Player
    - board: Board
    - current_round: int 

    + init_game(): None
    + play_game(): None
    + end_game(): None
}

class StringHolder {
    - welcomeStr: str 
    - ...
}

class AbstractPlayer {
    - symbol: str
    + make_move(board=None: Board)
}

class Player {
    - team: str

    + make_move(): Tuple[int, int]
}

class AIPlayer {
    + make_move(board: Board): Tuple[int, int]
    + determine_move(board: Board): Tuple[int, int]
}

class Board {
    - board: list[str]

    + move_possible(): bool 
    + place_move(i: int, j: int): bool
    + game_over(): bool 
    + get_winner(): str
    + print_board(): None
}

Game o-- Board 
Game o-- AbstractPlayer
Game o-- StringHolder

AbstractPlayer <|-- Player
AbstractPlayer <|-- AIPlayer

@enduml